--- a/src/Feature/ApplicationInsights/packages.config
+++ b/src/Feature/ApplicationInsights/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Azure.Core" version="1.38.0" targetFramework="net48" />
+  <package id="Azure.Core.Amqp" version="1.3.0" targetFramework="net48" />
+  <package id="Azure.Messaging.ServiceBus" version="7.17.5" targetFramework="net48" />
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net48" />
   <package id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0" targetFramework="net48" />
   <package id="EnterpriseLibrary.TransientFaultHandling.Caching" version="6.0.1304.0" targetFramework="net48" />
@@ -15,6 +18,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.6" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
+  <package id="Microsoft.Azure.Amqp" version="2.6.5" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.Configuration.ConfigurationBuilders.Base" version="1.0.2" targetFramework="net48" />
   <package id="Microsoft.Configuration.ConfigurationBuilders.Environment" version="1.0.2" targetFramework="net48" />
@@ -42,13 +46,19 @@
   <package id="Sitecore.Nexus.Consumption" version="1.3.1" targetFramework="net48" />
   <package id="Sitecore.Nexus.Licensing" version="2.0.6" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.ClientModel" version="1.0.0" targetFramework="net48" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net48" />
-  <package id="System.Memory" version="4.5.2" targetFramework="net48" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="6.0.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Memory.Data" version="1.0.2" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Xml" version="4.5.0" targetFramework="net48" />
   <package id="System.Security.Permissions" version="4.5.0" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="4.7.2" targetFramework="net48" />
+  <package id="System.Text.Json" version="4.7.2" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
