--- a/src/Foundation/DataAccess/App_Config/Includes/Foundation/ApplicationInsights/Configurator.config
+++ b/src/Foundation/DataAccess/App_Config/Includes/Foundation/ApplicationInsights/Configurator.config
@@ -2,7 +2,7 @@
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
   <sitecore>
     <services>
-      <configurator type="DeanOBrien.Foundation.DataAccess.Configurator.ServicesConfigurator, DeanOBrien.Foundation.DataAccess" />
+      <configurator type="DeanOBrien.Foundation.DataAccess.ApplicationInsights.Configurator.AppInsightsServicesConfigurator, DeanOBrien.Foundation.DataAccess.ApplicationInsights" />
     </services>
   </sitecore>
 </configuration>
