--- a/src/Feature/ApplicationInsights/DeanOBrien.Feature.ApplicationInsights.csproj
+++ b/src/Feature/ApplicationInsights/DeanOBrien.Feature.ApplicationInsights.csproj
@@ -262,12 +262,14 @@
     <Compile Include="Models\Alert.cs" />
     <Compile Include="Models\AlertType.cs" />
     <Compile Include="Models\ApplicationDetails.cs" />
+    <Compile Include="Models\GroupedExceptionOverTime.cs" />
     <Compile Include="Models\LinkedApplicationEdge.cs" />
     <Compile Include="Models\LinkedApplicationEdgeData.cs" />
     <Compile Include="Models\LinkedApplicationJson.cs" />
     <Compile Include="Models\LinkedApplicationNode.cs" />
     <Compile Include="Models\Subscriber.cs" />
     <Compile Include="Models\SummaryOfExceptions.cs" />
+    <Compile Include="Models\SummaryForAIOverview.cs" />
     <Compile Include="Pipelines\RegisterCustomRoute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Configurator\ServicesConfigurator.cs" />
@@ -285,7 +287,13 @@
   <ItemGroup>
     <Content Include="sitecore\shell\client\Applications\ApplicationInsights\css\ApplicationInsights.css" />
     <Content Include="sitecore\shell\client\Applications\ApplicationInsights\img\error.png" />
+    <Content Include="sitecore\shell\client\Applications\ApplicationInsights\img\giphy.gif">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="sitecore\shell\client\Applications\ApplicationInsights\img\good.png" />
+    <Content Include="sitecore\shell\client\Applications\ApplicationInsights\img\loading-dots.gif">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="sitecore\shell\client\Applications\ApplicationInsights\img\warning.png" />
     <Content Include="sitecore\shell\client\Applications\ApplicationInsights\js\ApplicationInsightsExceptions.js" />
     <Content Include="sitecore\shell\client\Applications\ApplicationInsights\js\ApplicationInsightsFlowChart.js" />
