--- a/src/Foundation/DataAccess/packages.config
+++ b/src/Foundation/DataAccess/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Azure.AI.OpenAI" version="2.0.0" targetFramework="net48" />
+  <package id="Azure.Core" version="1.43.0" targetFramework="net48" />
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net48" />
   <package id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0" targetFramework="net48" />
   <package id="EnterpriseLibrary.TransientFaultHandling.Caching" version="6.0.1304.0" targetFramework="net48" />
@@ -15,7 +17,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.6" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.Configuration.ConfigurationBuilders.Base" version="1.0.2" targetFramework="net48" />
   <package id="Microsoft.Configuration.ConfigurationBuilders.Environment" version="1.0.2" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration" version="3.1.5" targetFramework="net48" />
@@ -31,6 +33,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Mvp.Xml" version="2.3.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net48" />
+  <package id="OpenAI" version="2.0.0" targetFramework="net48" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net48" />
   <package id="SharpZipLib" version="1.3.0" targetFramework="net48" />
   <package id="Sitecore.Framework.Conditions" version="5.0.0" targetFramework="net48" />
@@ -42,14 +45,20 @@
   <package id="Sitecore.Nexus.Consumption" version="1.3.1" targetFramework="net48" />
   <package id="Sitecore.Nexus.Licensing" version="2.0.6" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.ClientModel" version="1.1.0" targetFramework="net48" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="7.0.0" targetFramework="net48" />
-  <package id="System.Memory" version="4.5.2" targetFramework="net48" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="6.0.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Memory.Data" version="1.0.2" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Xml" version="4.5.0" targetFramework="net48" />
   <package id="System.Security.Permissions" version="7.0.0" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="6.0.9" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
